eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/PruebaArchivos.build.log
16:25:49 **** Rebuild of configuration Debug for project PruebaArchivos ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\PruebaArchivos.o" "..\\src\\PruebaArchivos.c" 
..\src\PruebaArchivos.c: In function 'main':
..\src\PruebaArchivos.c:43:17: warning: unused variable 'j' [-Wunused-variable]
      int i = 0, j=0;
                 ^
..\src\PruebaArchivos.c:43:10: warning: unused variable 'i' [-Wunused-variable]
      int i = 0, j=0;
          ^
..\src\PruebaArchivos.c: In function 'autosave':
..\src\PruebaArchivos.c:91:10: warning: unused variable 'i' [-Wunused-variable]
      int i;
          ^
..\src\PruebaArchivos.c: At top level:
..\src\PruebaArchivos.c:183:2: error: expected identifier or '(' before 'return'
  return EXIT_SUCCESS;
  ^~~~~~
..\src\PruebaArchivos.c:184:1: error: expected identifier or '(' before '}' token
 }
 ^

16:25:49 Build Failed. 2 errors, 3 warnings. (took 237ms)

